jhipster/jhipster-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jhipster
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jhipster
      version: "v1"
  template:
    metadata:
      labels:
        app: jhipster
        version: "v1"
    spec:
      containers:
      - name: jhipster-app
        image: anoop2811/jhipster
        resources:
          requests:
            memory: "256Mi"
            cpu: "500m"
          limits:
            memory: "512Mi"
            cpu: "1"
        ports:
        - name: http
          containerPort: 8080
        readinessProbe:
          httpGet:
            path: /management/health
            port: http
          initialDelaySeconds: 20
          periodSeconds: 15
          failureThreshold: 6
        livenessProbe:
          httpGet:
            path: /management/health
            port: http
          initialDelaySeconds: 120
