jhipster/jhipster-service.yml
apiVersion: v1
kind: Service
metadata:
  name: jhipster
  namespace: default
  labels:
    app: jhipster
spec:
  selector:
    app: jhipster
  type: ClusterIP
  ports:
  - name: http
    port: 8080
