jhipster/jhipster-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jhipster
  namespace: default
spec:
  rules:
  - host: jhipster.default.192.168.99.100.nip.io
    http:
      paths:
      - path: /.*
        backend:
          serviceName: jhipster
          servicePort: 8080
